--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,79 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
+/* Reset body */
+body {
   margin: 0;
+  overflow-wrap: break-word;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+/* Do not break Korean words */
+:lang(ko) { word-break: keep-all; }
+
+/* Reset img */
+img {
+  max-width: 100%;
+  height: auto;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+/* CSS Reset by [class] */
+[class] {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none; /* ol, ul */
+  border: 0; /* button, fieldset, iframe, input, select, table, textarea */
+  background-color: transparent; /* button, dialog, mark, meter, progress */
+  border-collapse: collapse; /* table */
+  border-spacing: 0; /* table */
+  -webkit-appearance: none;
+  appearance: none; /* button, input, meter, progress, select, textarea */
+}
+[class]::before,
+[class]::after { 
+  box-sizing: border-box;
+  pointer-events: none;
+}
+[hidden] {
+  display: none !important;
+}
+[open] {
+  display: block !important;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+/* CSS Reset by [class] - where() 선택자를 지원하는 프로젝트에서 사용할 수 있음. 아래 선언한 모든 선택자의 특이성은 '0'.
+:where(body) {
+  margin: 0;
+  overflow-wrap: break-word;
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+:where(:lang(ko)) { word-break: keep-all; }
+:where(img) {
+  max-width: 100%;
+  height: auto;
 }
+:where([class]) {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+:where([class])::before,
+:where([class])::after { 
+  box-sizing: border-box; 
+  pointer-events: none;
+}
+:where(ol[class], ul[class]) { list-style: none; }
+:where(button[class], fieldset[class], iframe[class], input[class], select[class], textarea[class]) { border: 0; }
+:where(button[class], dialog[class], input[class], mark[class], meter[class], progress[class]) { background-color: transparent; }
+:where(table[class]) {
+  border: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+:where(button[class], input[class], meter[class], progress[class], select[class], textarea[class]) {
+  -webkit-appearance: none;
+  appearance: none;
+}
+:where([hidden]) {
+  display: none !important;
+}
+:where([open]) {
+  display: block !important;
+}
+*/
